Name:                HiggsSet

Version:             1.0

Synopsis:            A multi-index set with advanced query capabilites

Description:         This package allows you to define several typesafe
                     indizes on a set. You can query the set with an SQL-like
                     set of query operations.
                     This package was developed as a successor of 'Data.IxSet'.
                     It is meant to be more space efficient, since it uses
                     'Data.IntSet' and 'Data.TrieMap' as an underlying represenation.
                     It also has the potential to be fast, since indizes don't
                     need to be recalculated after each query and since
                     Patricia trees perform quite well for intersection and union.

                     This package comes without warranties. Although I use it
                     without problems in a large web project it is neither properly 
                     tested nor benchmarked.

                     Patches or suggestions for improvement are welcome. If you like,
                     start an issue on github.

Homepage:            http://github.com/lpeterse/HiggsSet

License:             BSD3

License-file:        LICENSE

Author:              Lars Petersen

Maintainer:          info@lars-petersen.net

Category:            Data



Build-type:          Simple

Cabal-version:       >=1.6

Library
  -- ghc-options:         -O2
  hs-source-dirs:      src
  Exposed-modules:     Data.HiggsSetPrime
  Build-depends:       base       >= 4.2 && < 6
                     , containers >= 0.4.2.0
                     , mtl        
                     , deepseq    
  
source-repository head
  type:              git
  location:          git://github.com/lpeterse/HiggsSet.git
